--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,8 +16,7 @@ nav:
   - Home: 'index.md'
   - Foundation: 'foundation.md'
   - Methodology:
-      - 'Property Prediction Algorighms':
-        'methodology/property-prediction-algorithms.md'
+      - 'Property Prediction Algorighms': 'methodology/property-prediction.md'
   - User Reference:
       - 'REST API': 'open-apis/rest-api.md'
   - Database Updates: 'database-updates.md'
