--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Feedstock to Function Docs
+site_name: Biositing Tool Docs
 
 site_description: Documentation for Feedstock to Function Tool,
   a project that harnesses the power of machine learning to predict properties
@@ -6,20 +6,20 @@ site_description: Documentation for Feedstock to Function Tool,
   benefits, and risk of promising biobased molecules or biofuels to enable
   faster, less expensive bioprocess optimization and scale-up.
 copyright: Built by the Feedstock to Function Team
-site_url: https://feedstock-to-function.lbl.gov
+site_url: https://biositing.jbei.org
 
-repo_name: 'Feedstock-to-Function/ftf-docs'
-repo_url: 'https://github.com/Feedstock-to-Function/ftf-docs'
+repo_name: 'tylerhuntington/biositing-docs'
+repo_url: 'https://github.com/tylerhuntington/biositing-docs'
 
 
 nav:
   - Home: 'index.md'
-  - Methodology:
-      - 'Property Prediction': 'methodology/property-prediction.md'
-      - 'Blend Tool': 'methodology/blend-tool.md'
+#    # - Methodology:
+#      - 'Property Prediction': 'methodology/property-prediction.md'
+#      - 'Blend Tool': 'methodology/blend-tool.md'
   - User Reference:
       - 'REST API': 'user-guide/rest-api.md'
-  - Database Updates: 'database-updates.md'
+#  - Database Updates: 'database-updates.md'
 
 theme:
   name: 'material'
