--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,11 +9,11 @@ repo_url: 'https://github.com/tylerhuntington/biositing-docs'
 
 
 nav:
-  - Home: 'index.md'
+#  - Home: 'index.md'
 #    # - Methodology:
 #      - 'Property Prediction': 'methodology/property-prediction.md'
 #      - 'Blend Tool': 'methodology/blend-tool.md'
-  - User Reference:
+#  - User Reference:
       - 'REST API': 'user-guide/rest-api.md'
 #  - Database Updates: 'database-updates.md'
 
